crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@72.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO nummultirange_test VALUES(nummultirange(numrange(1.1, 2.2)));"
---
InsertStmt@0..73
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..30
    Ident@12..30 "nummultirange_test"
  Whitespace@30..31 " "
  SelectStmt@31..69
    Values@31..37 "VALUES"
    Ascii40@37..38 "("
    List@38..69
      FuncCall@38..69
        Ident@38..51 "nummultirange"
        Ascii40@51..52 "("
        FuncCall@52..69
          Ident@52..60 "numrange"
          Ascii40@60..61 "("
          AConst@61..64
            Fconst@61..64 "1.1"
          Ascii44@64..65 ","
          Whitespace@65..66 " "
          AConst@66..69
            Fconst@66..69 "2.2"
  Ascii41@69..70 ")"
  Ascii41@70..71 ")"
  Ascii41@71..72 ")"
  Ascii59@72..73 ";"

