crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@73.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO nummultirange_test VALUES('{empty}');"
---
InsertStmt@0..49
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..30
    Ident@12..30 "nummultirange_test"
  Whitespace@30..31 " "
  SelectStmt@31..47
    Values@31..37 "VALUES"
    Ascii40@37..38 "("
    List@38..47
      AConst@38..47
        Sconst@38..47 "'{empty}'"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

