crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@74.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO nummultirange_test VALUES(nummultirange(numrange(1.7, 1.7, '[]'), numrange(1.7, 1.9)));"
---
InsertStmt@0..99
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..30
    Ident@12..30 "nummultirange_test"
  Whitespace@30..31 " "
  SelectStmt@31..95
    Values@31..37 "VALUES"
    Ascii40@37..38 "("
    List@38..95
      FuncCall@38..95
        Ident@38..51 "nummultirange"
        Ascii40@51..52 "("
        FuncCall@52..75
          Ident@52..60 "numrange"
          Ascii40@60..61 "("
          AConst@61..64
            Fconst@61..64 "1.7"
          Ascii44@64..65 ","
          Whitespace@65..66 " "
          AConst@66..69
            Fconst@66..69 "1.7"
          Ascii44@69..70 ","
          Whitespace@70..71 " "
          AConst@71..75
            Sconst@71..75 "'[]'"
        Ascii41@75..76 ")"
        Ascii44@76..77 ","
        Whitespace@77..78 " "
        FuncCall@78..95
          Ident@78..86 "numrange"
          Ascii40@86..87 "("
          AConst@87..90
            Fconst@87..90 "1.7"
          Ascii44@90..91 ","
          Whitespace@91..92 " "
          AConst@92..95
            Fconst@92..95 "1.9"
  Ascii41@95..96 ")"
  Ascii41@96..97 ")"
  Ascii41@97..98 ")"
  Ascii59@98..99 ";"

