crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@77.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nmr, lower_inc(nmr), lower_inf(nmr), upper_inc(nmr), upper_inf(nmr) FROM nummultirange_test ORDER BY nmr;"
---
SelectStmt@0..112
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..10 "nmr"
  Ascii44@10..11 ","
  Whitespace@11..12 " "
  ResTarget@12..25
    FuncCall@12..25
      Ident@12..21 "lower_inc"
      Ascii40@21..22 "("
      ColumnRef@22..25
        Ident@22..25 "nmr"
  Ascii41@25..26 ")"
  Ascii44@26..27 ","
  Whitespace@27..28 " "
  ResTarget@28..41
    FuncCall@28..41
      Ident@28..37 "lower_inf"
      Ascii40@37..38 "("
      ColumnRef@38..41
        Ident@38..41 "nmr"
  Ascii41@41..42 ")"
  Ascii44@42..43 ","
  Whitespace@43..44 " "
  ResTarget@44..57
    FuncCall@44..57
      Ident@44..53 "upper_inc"
      Ascii40@53..54 "("
      ColumnRef@54..57
        Ident@54..57 "nmr"
  Ascii41@57..58 ")"
  Ascii44@58..59 ","
  Whitespace@59..60 " "
  ResTarget@60..73
    FuncCall@60..73
      Ident@60..69 "upper_inf"
      Ascii40@69..70 "("
      ColumnRef@70..73
        Ident@70..73 "nmr"
  Ascii41@73..74 ")"
  Whitespace@74..75 " "
  From@75..79 "FROM"
  Whitespace@79..80 " "
  RangeVar@80..98
    Ident@80..98 "nummultirange_test"
  Whitespace@98..99 " "
  SortBy@99..111
    Order@99..104 "ORDER"
    Whitespace@104..105 " "
    By@105..107 "BY"
    Whitespace@107..108 " "
    ColumnRef@108..111
      Ident@108..111 "nmr"
  Ascii59@111..112 ";"

