crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@80.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM nummultirange_test WHERE nmr = '{[3,)}';"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..32
    Ident@14..32 "nummultirange_test"
  Whitespace@32..33 " "
  Where@33..38 "WHERE"
  Whitespace@38..39 " "
  AExpr@39..53
    ColumnRef@39..42
      Ident@39..42 "nmr"
    Whitespace@42..43 " "
    Ascii61@43..44 "="
    Whitespace@44..45 " "
    AConst@45..53
      Sconst@45..53 "'{[3,)}'"
  Ascii59@53..54 ";"

